-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 15, 16, 17
-
Component/s: client-libs
-
b12
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8264269 | 11.0.12-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8264042 | 11.0.12 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
The function wcstombsdmp is called at a few places in awt_InputMethod.c.
This function needs checking of a NULL return value and freeing of the memory alloced by this function. However this is missing at one place in the file.
This function needs checking of a NULL return value and freeing of the memory alloced by this function. However this is missing at one place in the file.
- backported by
-
JDK-8264042 handle wcstombsdmp return value correctly in unix awt_InputMethod.c
-
- Resolved
-
-
JDK-8264269 handle wcstombsdmp return value correctly in unix awt_InputMethod.c
-
- Resolved
-