8262461: handle wcstombsdmp return value correctly in unix awt_InputMethod.c

Reviewed-by: psadhukhan, azvegint, aivanov